--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    <nav class="nav">
+    <header class="header">
         <h1>Weather Dashboard</h1>
-    </nav>
+    </header>
+
+    <aside class="citySearch" id="citySearchId">
+        <div>
+            <h2>Search for a City:
+                <input type="text" id="citySearchInput" placeholder="SanDiego">
+                <button id="searchButtonId" class="searchBtn">Search</button>
+            </h2>
+        </div>
+        <div 
+        class="history" id="historyId">
+        </div>        
+    </aside>
+
+    <main 
+    class="currentTemp" id="currentTempId">
+    </main>
+
+    <section 
+    class="forecast" id="forecastId">
+    </section>
+
 </body>
+
 </html>
