--- a/index.html
+++ b/index.html
@@ -14,19 +14,14 @@
     </header>
 
     <aside class="citySearch" id="citySearchId">
-        <div>
-            <h2>Search for a City:
-                <input type="text" id="citySearchInput" placeholder="SanDiego">
-                <button id="searchButtonId" class="searchBtn">Search</button>
-            </h2>
-        </div>
-        <div 
-        class="history" id="historyId">
-        </div>        
+        <h2>Search for a City:</h2>
+        <input type="text" id="citySearchInput" placeholder="San Diego">
+        <button id="searchButtonId" class="searchBtn">Search</button>
+        <div class="history" id="historyId">History</div>        
     </aside>
 
     <main 
-    class="currentTemp" id="currentTempId">
+    class="currentTemp" id="currentTempId">main
     </main>
 
     <section 
