lay out ocrrected

--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
         <h1>Weather Dashboard</h1>
     </header>
 
-    <aside class="citySearch" id="citySearchId">
-        <h2>Search for a City:</h2>
-        <input type="text" id="citySearchInput" placeholder="San Diego">
-        <button id="searchButtonId" class="searchBtn">Search</button>
-        <div class="history" id="historyId">History</div>        
-    </aside>
+    <div class="displayContainer" id="displayContainerId">
+        <aside class="citySearch" id="citySearchId">
+            <h2>Search for a City:</h2>
+            <input type="text" id="citySearchInput" placeholder="San Diego">
+            <button id="searchButtonId" class="searchBtn">Search</button>
+            <div class="history" id="historyId">History</div>        
+        </aside>
+        <main class="currentTemp" id="currentTempId"></main>
+    </div>
 
-    <main 
-    class="currentTemp" id="currentTempId">main
-    </main>
 
-    <section 
-    class="forecast" id="forecastId">
-    </section>
+
+        <section 
+        class="forecast" id="forecastId">
+        </section>
 
 </body>
 
