--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
             <input type="text" id="citySearchInput" placeholder="San Diego">
             <button id="searchButtonId" class="searchBtn">Search</button>
             <div class="history" id="historyId">History</div>        
+            <button id="cityHistoryButtonId" class="cityHistoryBtn">Montreal</button>
         </aside>
-        <main class="currentTemp" id="currentTempId"></main>
+        <main class="currentTemp" id="currentTempId">MAIN</main>
     </div>
 
 
 
-        <section 
-        class="forecast" id="forecastId">
-        </section>
+    <section 
+        class="forecast" id="forecastId"> 
+        
+      
+    </section>
 
 </body>
 
