api works, add, forecast api and buttons for history.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
 
     <section 
         class="forecast" id="forecastId"> 
-        
-      
     </section>
-
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
