add  forecast api  fix storage

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     </header>
 
     <div class="displayContainer" id="displayContainerId">
+        <div class="weatherData" id="weatherData"></div>
         <aside class="citySearch" id="citySearchId">
             <h2>Search for a City:</h2>
             <input type="text" id="citySearchInput" placeholder="San Diego">
             <button id="searchButtonId" class="searchBtn">Search</button>
-            <div class="history" id="historyId">History</div>        
-            <button id="cityHistoryButtonId" class="cityHistoryBtn">Montreal</button>
+            <div class="history" id="historyId"></div>        
+                <div id="cityHistoryButtonId" class="cityHistoryBtn"></div>
         </aside>
-        <main class="currentTemp" id="currentTempId">MAIN</main>
+        <main class="currentTemp" id="currentTempId"></main>
     </div>
 
 
