--- a/index.html
+++ b/index.html
@@ -19,17 +19,13 @@
             <h2>Search for a City:</h2>
             <input type="text" id="citySearchInput" placeholder="San Diego">
             <button id="searchButtonId" class="searchBtn">Search</button>
-            <div class="history" id="historyId"></div>        
+            <div class="history" id="history"></div>        
                 <div id="cityHistoryButtonId" class="cityHistoryBtn"></div>
         </aside>
         <main class="currentTemp" id="currentTempId"></main>
+        <div class="forecast" id="forecastId"></div>
     </div>
 
-
-
-    <section 
-        class="forecast" id="forecastId"> 
-    </section>
     <script src="./assets/script.js"></script>
 </body>
 
