completed README.md file

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
+    <title>Weather Wiz</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
     <header class="header">
-        <h1>Weather Dashboard</h1>
+        <h1>Weather Wiz Dashboard</h1>
     </header>
 
     <div class="displayContainer" id="displayContainerId">
